--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.loistudio</groupId>
     <artifactId>MWebConnect</artifactId>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>1.0.8-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
@@ -32,6 +32,12 @@
             <groupId>org.slf4j</groupId>  
             <artifactId>slf4j-nop</artifactId> 
             <version>1.7.30</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>2.6.1</version>
         </dependency>
     </dependencies>
 
